--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "app",
+  "homepage": "https://sininen-taivas.github.io/ergo-wbo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "eslint --cache --ext .js ./src/",
-    "lint:fix": "eslint --fix --cache --ext .js ./src/"
+    "lint:fix": "eslint --fix --cache --ext .js ./src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,7 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^2.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
